--- a/modules/render/CMakeLists.txt
+++ b/modules/render/CMakeLists.txt
@@ -3,13 +3,18 @@ find_package(glfw3 REQUIRED)
 
 file(GLOB SRC_FILES *.cpp)
 
-add_library(render STATIC ${SRC_FILES})
+set(SUB_LIBRARY_NAME render)
+add_library(${SUB_LIBRARY_NAME} STATIC ${SRC_FILES})
 
-target_include_directories(render PUBLIC 
+target_include_directories(${SUB_LIBRARY_NAME} PUBLIC 
     ${CMAKE_SOURCE_DIR}/3rdparties/glad
 )
 
-target_link_libraries(render
+target_link_libraries(${SUB_LIBRARY_NAME}
     PRIVATE glad
-    PUBLIC glfw 
+    PUBLIC glfw
 )
+
+file(COPY ${CMAKE_SOURCE_DIR}/modules/render/GLSL 
+            DESTINATION ${CMAKE_BINARY_DIR}/modules/render 
+            FOLLOW_SYMLINK_CHAIN)
