--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,10 @@
         "cinttypes": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "*.glsl": "cpp",
+        "csignal": "cpp",
+        "any": "cpp",
+        "span": "cpp"
     }
 }
