--- a/modules/render/CMakeLists.txt
+++ b/modules/render/CMakeLists.txt
@@ -7,10 +7,12 @@ set(SUB_LIBRARY_NAME render)
 add_library(${SUB_LIBRARY_NAME} STATIC ${SRC_FILES})
 
 target_include_directories(${SUB_LIBRARY_NAME} PUBLIC 
+    ${CMAKE_SOURCE_DIR}/3rdparties/
+    ${CMAKE_SOURCE_DIR}/3rdparties/stb_image
     ${CMAKE_SOURCE_DIR}/3rdparties/glad
 )
 
 target_link_libraries(${SUB_LIBRARY_NAME}
-    PRIVATE glad
+    PRIVATE glad stb_image
     PUBLIC glfw
 )
