--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,5 +78,6 @@
         "ranges": "cpp",
         "cfenv": "cpp",
         "valarray": "cpp"
-    }
+    },
+    "zencoder.enableRepoIndexing": true
 }
