--- a/modules/interface/CMakeLists.txt
+++ b/modules/interface/CMakeLists.txt
@@ -3,15 +3,14 @@ find_package(glfw3 REQUIRED)
 
 file(GLOB SRC_FILES *.cpp)
 
-set(SUB_LIBRARY_NAME render)
+set(SUB_LIBRARY_NAME interface)
 add_library(${SUB_LIBRARY_NAME} STATIC ${SRC_FILES})
 
 target_include_directories(${SUB_LIBRARY_NAME} PUBLIC 
-    ${CMAKE_SOURCE_DIR}/3rdparties/stb_image
-    ${CMAKE_SOURCE_DIR}/3rdparties/glad
+    ${CMAKE_SOURCE_DIR}/3rdparties/yaml-cpp
 )
 
 target_link_libraries(${SUB_LIBRARY_NAME}
-    PRIVATE glad stb_image
+    PRIVATE glad yaml-cpp
     PUBLIC glfw
 )
