--- a/modules/interface/CMakeLists.txt
+++ b/modules/interface/CMakeLists.txt
@@ -11,6 +11,6 @@ target_include_directories(${SUB_LIBRARY_NAME} PUBLIC
 )
 
 target_link_libraries(${SUB_LIBRARY_NAME}
-    PRIVATE glad yaml-cpp
+    PRIVATE glad yaml-cpp fmt
     PUBLIC glfw
 )
