--- a/modules/interface/CMakeLists.txt
+++ b/modules/interface/CMakeLists.txt
@@ -7,7 +7,8 @@ set(SUB_LIBRARY_NAME interface)
 add_library(${SUB_LIBRARY_NAME} STATIC ${SRC_FILES})
 
 target_include_directories(${SUB_LIBRARY_NAME} PUBLIC 
-    ${CMAKE_SOURCE_DIR}/3rdparties/yaml-cpp
+    ${CMAKE_SOURCE_DIR}/3rdparties
+    ${CMAKE_SOURCE_DIR}/modules
 )
 
 target_link_libraries(${SUB_LIBRARY_NAME}
