--- a/modules/config/default-interface.yaml
+++ b/modules/config/default-interface.yaml
@@ -1,4 +1,4 @@
-keyboard_bindings:
+keyboard_and_mouse_bindings:
   - key: "GLFW_KEY_W"
     callback: "move_forward"
   - key: "GLFW_KEY_S"
@@ -7,11 +7,10 @@ keyboard_bindings:
     callback: "move_left"
   - key: "GLFW_KEY_D"
     callback: "move_right"
-
-mouse_bindings:
-  - action: "GLFW_MOUSE_BUTTON_LEFT"
+    
+  - key: "GLFW_MOUSE_BUTTON_LEFT"
     callback: "camera_rotate"
-  - action: "GLFW_MOUSE_BUTTON_RIGHT"
+  - key: "GLFW_MOUSE_BUTTON_RIGHT"
     callback: "camera_zoom"
-  - action: "GLFW_MOUSE_BUTTON_MIDDLE"
+  - key: "GLFW_MOUSE_BUTTON_MIDDLE"
     callback: "camera_move"
