--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -1,16 +1,12 @@
 keyboard_and_mouse_bindings:
-  #- key: "GLFW_KEY_W"
-  #  callback: "move_forward"
-  #- key: "GLFW_KEY_S"
-  #  callback: "move_backward"
-  #- key: "GLFW_KEY_A"
-  #  callback: "move_left"
-  #- key: "GLFW_KEY_D"
-  #  callback: "move_right"
+  - key: "GLFW_KEY_W"
+    callback: "camera_move_forward"
+  - key: "GLFW_KEY_S"
+    callback: "camera_move_backward"
     
   #- key: "GLFW_MOUSE_BUTTON_LEFT"
   #  callback: "camera_rotate"
   #- key: "GLFW_MOUSE_BUTTON_RIGHT"
   #  callback: "camera_zoom"
-  - key: "GLFW_MOUSE_BUTTON_MIDDLE"
-    callback: "camera_move"
+  - key: "LUNAR_MOUSE_SCROLL"
+    callback: "camera_zoom"
