--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -1,12 +1,15 @@
+keyboard_and_mouse_settings:
+  reset_mouse_position_upon_enter_window: true
 keyboard_and_mouse_bindings:
   - key: "GLFW_KEY_W"
     callback: "camera_move_forward"
   - key: "GLFW_KEY_S"
     callback: "camera_move_backward"
-    
-  #- key: "GLFW_MOUSE_BUTTON_LEFT"
-  #  callback: "camera_rotate"
-  #- key: "GLFW_MOUSE_BUTTON_RIGHT"
-  #  callback: "camera_zoom"
   - key: "LUNAR_MOUSE_SCROLL"
     callback: "camera_zoom"
+  - key: "GLFW_KEY_A"
+    callback: "camera_move_left"
+  - key: "GLFW_KEY_D"
+    callback: "camera_move_right"
+  - key: "LUNAR_MOUSE_MOVE"
+    callback: "camera_rotate"
