--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -13,3 +13,4 @@ keyboard_and_mouse_bindings:
     callback: "camera_move_right"
   - key: "LUNAR_MOUSE_MOVE"
     callback: "camera_rotate"
+    mod: "GLFW_MOD_SHIFT"
