--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -1,3 +1,5 @@
+# capslock and numlock are not supported
+
 keyboard_and_mouse_settings:
   reset_mouse_position_upon_enter_window: true
 keyboard_and_mouse_bindings:
@@ -13,4 +15,4 @@ keyboard_and_mouse_bindings:
     callback: "camera_move_right"
   - key: "LUNAR_MOUSE_MOVE"
     callback: "camera_rotate"
-    mod: "GLFW_MOD_SHIFT"
+    mod: ["GLFW_MOD_SHIFT", "GLFW_MOD_CONTROL"]
