--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -18,3 +18,9 @@ keyboard_and_mouse_bindings:
   - key: "LUNAR_MOUSE_MOVE"
     callback: "camera_rotate"
     mod: ["GLFW_MOD_SHIFT", "GLFW_MOD_CONTROL"]
+  - key: "GLFW_KEY_ESCAPE"
+    callback: "window_close"
+  - key: "GLFW_KEY_F"
+    callback: "window_fullscreen"
+  - key: "GLFW_KEY_G"
+    callback: "window_windowed"
