--- a/modules/config/default-interface.yaml
+++ b/modules/config/default-interface.yaml
@@ -17,4 +17,10 @@ keyboard_and_mouse_bindings:
     callback: "camera_reset_zoom"
   - key: "LUNAR_MOUSE_MOVE"
     callback: "camera_rotate"
-    mod: ["GLFW_MOD_SHIFT", "GLFW_MOD_CONTROL"]
+    mod: ["GLFW_MOD_CONTROL"]
+  - key: "GLFW_KEY_ESCAPE"
+    callback: "window_close"
+  - key: "GLFW_KEY_F"
+    callback: "window_fullscreen"
+  - key: "GLFW_KEY_G"
+    callback: "window_windowed"
