--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -17,7 +17,7 @@ keyboard_and_mouse_bindings:
     callback: "camera_reset_zoom"
   - key: "LUNAR_MOUSE_MOVE"
     callback: "camera_rotate"
-    mod: ["GLFW_MOD_SHIFT", "GLFW_MOD_CONTROL"]
+    mod: ["GLFW_MOD_CONTROL"]
   - key: "GLFW_KEY_ESCAPE"
     callback: "window_close"
   - key: "GLFW_KEY_F"
