--- a/modules/config/interface.yaml
+++ b/modules/config/interface.yaml
@@ -18,6 +18,10 @@ keyboard_and_mouse_bindings:
     callback: "camera_move_left"
   - key: "GLFW_KEY_D"
     callback: "camera_move_right"
+  - key: "GLFW_KEY_Q"
+    callback: "camera_move_up"
+  - key: "GLFW_KEY_E"
+    callback: "camera_move_down"
   - key: "GLFW_KEY_R"
     callback: "camera_reset_zoom"
   - key: "LUNAR_MOUSE_MOVE"
